# test_opencl

./: build.sh  clean.sh  run.sh  use_repo.sh
catkin_ws/: build.sh
catkin_ws/src/test_opencl/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/test_opencl/include/: gpu_utils.h  raytrace_utils.hpp  voxel_raytrace_gpu.hpp
catkin_ws/src/test_opencl/src/: gpu_utils.cpp  numpy_to_cvmat.cpp  voxel_raytrace_gpu_module.cpp
test_opencl/qc_opencl/: demo_raytracing_gpu.py
test_opencl/qc_opencl/raytracing_opencl_kernels/: gpu_utils.py  kernel_depth.cl  kernel_depth_local_mem.cl  kernel_marking.cl  kernel_pointcloud.cl
